# libby

./: .gitignore  CHANGELOG.md  CLAUDE.md  Demand.md  README.md  conftest.py  pyproject.toml
libby/: __init__.py  __main__.py
libby/api/: __init__.py  arxiv.py  base.py  biorxiv.py  core.py  crossref.py  pmc.py  scholarly.py  scihub.py  scihub_selenium.py  semantic_scholar.py  serpapi.py  unpaywall.py
libby/cli/: __init__.py  extract.py  fetch.py  serpapi_policy.py  utils.py  websearch.py
libby/config/: __init__.py  defaults.py  env_check.py  loader.py
libby/core/: __init__.py  ai_extractor.py  citekey.py  metadata.py  pdf_fetcher.py  pdf_text.py  websearch.py
libby/models/: __init__.py  config.py  fetch_result.py  metadata.py  result.py  search_filter.py  search_result.py
libby/output/: __init__.py  bibtex.py  json.py
libby/utils/: __init__.py  doi_parser.py  file_ops.py  retry.py  url_validation.py
tests/api/: test_arxiv.py  test_base.py  test_biorxiv.py  test_crossref.py  test_pmc.py  test_scholarly.py  test_scihub.py  test_semantic_scholar.py  test_serpapi.py  test_unpaywall.py
tests/cli/: test_fetch.py  test_websearch.py
tests/config/: __init__.py  test_config_loader.py
tests/core/: test_ai_extractor.py  test_citekey.py  test_metadata_extractor.py  test_pdf_fetcher.py  test_pdf_text.py  test_websearch.py
tests/integration/: test_extract.py  test_fetch.py  test_websearch.py
tests/models/: test_config.py  test_fetch_result.py  test_metadata.py  test_search_filter.py  test_search_result.py
tests/output/: __init__.py  test_bibtex.py
(+9 files in other folders)
