[project]
name = "libby"
version = "0.3.1"
description = "AI-friendly CLI tool for scholarly paper management"
authors = [{name = "Yugi"}]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "aiolimiter>=1.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "scholarly>=1.7.0",
    "openai>=1.0.0",
    "selenium>=4.43.0",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
libby = "libby.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "W", "I"]
